--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@gltf-transform/core": "^2.1.4",
+    "@gltf-transform/extensions": "^2.1.4",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "three": "^0.139.2",
     "three-to-cannon": "^4.0.2"
   },
   "devDependencies": {
-    "@gltf-transform/core": "^2.1.4",
-    "@gltf-transform/extensions": "^2.1.4",
     "@gltf-transform/view": "^0.4.2",
     "@types/dat.gui": "^0.7.7",
     "@types/express": "^4.17.13",
