Add sky and world

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i": "^0.3.7",
     "nodemon": "^2.0.15",
     "npm": "^8.7.0",
+    "three-csm": "^1.1.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
