--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently -k \"tsc -p ./src/server -w\" \"nodemon ./dist/server/server.js\" \"webpack serve --config ./src/client/webpack.dev.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/server/server.js",
-    "build": "concurrently -k \"webpack-cli --config ./src/client/webpack.prod.js\" \"tsc -p ./src/server\" "
+    "build": "webpack --config ./src/client/webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
