--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,11 @@ edition = "2021"
 websocket = "0.26.5"
 serde_json = "1.0"
 serde = {version = "1.0.150", features = ["derive"]}
+nalgebra = "0.31.4"
+rapier3d = "0.16.1"
+rand = "0.8.5"
+#gltf = "1.0.0"
+
+[dependencies.gltf]
+version = "1.0"
+features = ["extras", "names"]
