--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently -k \"tsc -p ./src/server -w\" \"nodemon ./dist/server/server.js\" \"webpack serve --config ./src/client/webpack.dev.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/server/server.js",
-    "build": "webpack --config ./src/client/webpack.prod.js"
+    "build": "webpack --config ./src/client/webpack.prod.js",
+    "build_dev": "webpack --config ./src/client/webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
