--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,4 +19,4 @@ futures-channel = "0.3.25"
 
 [dependencies.gltf]
 version = "1.0"
-features = ["extras", "names"]
+features = ["extras", "names","utils"]
