--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "npm": "^8.7.0",
     "three-csm": "^1.1.1",
     "ts-loader": "^9.2.8",
+    "ts-shader-loader": "^2.0.2",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
