feat: player spawned assets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     command: ./target/release/server
     volumes:
     - ./Blender:/assets/
+    - ./client/dist/client/assets/unoptimized:/assets_unoptimized/
       # - ./client/dist/client/assets:/assets/
       # - /app/node_modules
     ports:
