--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
   server:
     build: ./server
     command: ./target/release/server
+    environmet:
+    - RUST_BACKTRACE:1
     volumes:
     - ./Blender:/assets/
     - ./client/dist/client/assets/unoptimized:/assets_unoptimized/
