--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,8 +9,8 @@ build = "./build.rs"
 [dependencies]
 serde_json = "1.0"
 serde = {version = "1.0.150", features = ["derive"]}
-nalgebra = "0.31.4"
-rapier3d = {version = "0.16.1", features = [ "serde-serialize" ] }
+nalgebra = "*"
+rapier3d = {version = "0.17.1", features = [ "serde-serialize" ] }
 #rapier3d = { path = "../../rapier/crates/rapier3d" }
 ts-rs = "6.2"
 
