--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    working-directory: ./server
     steps:
+
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
