--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,8 @@ jobs:
 
     - uses: actions/checkout@v3
     - name: Build
-      working-directory: ./app
+      working-directory: ./server
       run: cargo build --verbose
     - name: Run tests
-      working-directory: ./app
+      working-directory: ./server
       run: cargo test --verbose
