docker: build client on server

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,8 +8,11 @@ WORKDIR /dir
 
 COPY ["package.json", "./"]
 
-RUN npm install --production
+RUN npm install 
+#--production
 
 COPY . .
+
+RUN npm run build
 
 # CMD [ "npm" ,"start" ]
