--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,7 @@
     "@gltf-transform/core": "^2.1.4",
     "@gltf-transform/extensions": "^2.1.4",
     "express": "^4.17.3",
-    "lodash": "^4.17.21",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
-    "three": "^0.139.2",
-    "three-to-cannon": "^4.0.2"
+    "three": "^0.139.2"
   },
   "devDependencies": {
     "@gltf-transform/view": "^0.4.2",
@@ -29,12 +25,10 @@
     "@types/node": "^17.0.24",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/three": "^0.139.0",
-    "cannon-es": "^0.19.0",
     "concurrently": "^7.1.0",
     "dat.gui": "^0.7.9",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "i": "^0.3.7",
     "nodemon": "^2.0.15",
     "npm": "^8.7.0",
     "three-csm": "^1.1.1",
