--- a/client/src/client/tsconfig.json
+++ b/client/src/client/tsconfig.json
@@ -9,7 +9,9 @@
             "backend": ["../../../server/bindings/index.ts","../typings/rust/index.ts"],
             
             
-        }
+        },
+        "allowSyntheticDefaultImports": true
     },
+    
     "include": ["**/*.ts"]
 }
